# libfreeztile

./: .gitignore  Makefile.am  README.md  configure.ac
example/fzex1.lv2/: fzex1.c  fzex1.ttl  manifest.ttl
src/: Makefile.am  adsr.c  adsr.h  class.c  class.h  defs.h  delay.c  delay.h  filter.c  filter.h  form.c  form.h  graph.c  graph.h  lfo.c  lfo.h  list.c  list.h  malloc.c  malloc.h  map.c  map.h  mod.c  mod.h  node.c  node.h  private-mod.h  private-node.h  voice.c  voice.h
tests/: Makefile.am  check_adsr.c  check_class.c  check_delay.c  check_filter.c  check_form.c  check_graph.c  check_lfo.c  check_list.c  check_malloc.c  check_map.c  check_mod.c  check_node.c  check_voice.c  plot.sh
