# Process this file with automake to produce Makefile.in.
lib_LTLIBRARIES = libfreeztile.la
libfreeztile_la_SOURCES =        \
    config.h defs.h              \
    malloc.h malloc.c            \
    class.h class.c              \
    list.h list.c                \
    map.h map.c                  \
    voice.h voice.c              \
    mod.h private-mod.h mod.c    \
    node.h private-node.h node.c \
    graph.h graph.c              \
    form.h form.c                \
    lfo.h lfo.c                  \
    adsr.h adsr.c                \
    filter.h filter.c            \
    delay.h delay.c
libfreeztile_la_LIBADD = -lm
