# Process this file with automake to produce Makefile.in.
TESTS =          \
    check_malloc \
    check_class  \
    check_list   \
    check_voice  \
    check_mod    \
    check_node   \
    check_graph  \
    check_form   \
    check_lfo    \
    check_adsr   \
    check_filter
check_PROGRAMS = \
    check_malloc \
    check_class  \
    check_list   \
    check_voice  \
    check_mod    \
    check_node   \
    check_graph  \
    check_form   \
    check_lfo    \
    check_adsr   \
    check_filter
check_malloc_SOURCES = check_malloc.c $(top_builddir)/src/malloc.h
check_malloc_CFLAGS = @CHECK_CFLAGS@
check_malloc_LDADD = $(top_builddir)/src/libfreeztile.la @CHECK_LIBS@
check_class_SOURCES = check_class.c $(top_builddir)/src/class.h
check_class_CFLAGS = @CHECK_CFLAGS@
check_class_LDADD = $(top_builddir)/src/libfreeztile.la @CHECK_LIBS@
check_list_SOURCES = check_list.c $(top_builddir)/src/list.h
check_list_CFLAGS = @CHECK_CFLAGS@
check_list_LDADD = $(top_builddir)/src/libfreeztile.la @CHECK_LIBS@
check_voice_SOURCES = check_voice.c $(top_builddir)/src/voice.h
check_voice_CFLAGS = @CHECK_CFLAGS@
check_voice_LDADD = $(top_builddir)/src/libfreeztile.la @CHECK_LIBS@
check_mod_SOURCES = check_mod.c $(top_builddir)/src/mod.h
check_mod_CFLAGS = @CHECK_CFLAGS@
check_mod_LDADD = $(top_builddir)/src/libfreeztile.la @CHECK_LIBS@
check_node_SOURCES = check_node.c $(top_builddir)/src/node.h
check_node_CFLAGS = @CHECK_CFLAGS@
check_node_LDADD = $(top_builddir)/src/libfreeztile.la @CHECK_LIBS@
check_graph_SOURCES = check_graph.c $(top_builddir)/src/graph.h
check_graph_CFLAGS = @CHECK_CFLAGS@
check_graph_LDADD = $(top_builddir)/src/libfreeztile.la @CHECK_LIBS@
check_form_SOURCES = check_form.c $(top_builddir)/src/form.h
check_form_CFLAGS = @CHECK_CFLAGS@
check_form_LDADD = $(top_builddir)/src/libfreeztile.la @CHECK_LIBS@
check_lfo_SOURCES = check_lfo.c $(top_builddir)/src/lfo.h
check_lfo_CFLAGS = @CHECK_CFLAGS@
check_lfo_LDADD = $(top_builddir)/src/libfreeztile.la @CHECK_LIBS@
check_adsr_SOURCES = check_adsr.c $(top_builddir)/src/adsr.h
check_adsr_CFLAGS = @CHECK_CFLAGS@
check_adsr_LDADD = $(top_builddir)/src/libfreeztile.la @CHECK_LIBS@
check_filter_SOURCES = check_filter.c $(top_builddir)/src/filter.h
check_filter_CFLAGS = @CHECK_CFLAGS@
check_filter_LDADD = $(top_builddir)/src/libfreeztile.la @CHECK_LIBS@
